# bdsc-canteen-backend

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Database.cpp  Log.cpp  Login.cpp  Main.cpp  Services.cpp  Services.h  Signup.cpp  TESTS.CPP  Utilities.cpp  WebSocket.cpp  WebSocket.h
src/include/: Database.h  Log.h  Login.h  Main.h  Services.h  Signup.h  Utilities.h  WebSocket.h
